# django-playground

./: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  compose.docs.yaml  compose.local.yaml  docker-compose.local.yml  docker-compose.production.yml  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile  entrypoint
compose/production/traefik/: traefik.yml
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_playground/: conftest.py
django_playground/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
django_playground/static/css/: project.css
django_playground/stocks/: apps.py  factories.py  forms.py  mixins.py  models.py  tasks.py  urls.py  views.py
django_playground/stocks/fixtures/: products.json
django_playground/stocks/management/commands/: generate_test_data.py  import_products.py
django_playground/stocks/migrations/: 0001_initial.py  0002_alter_product_availability_status_and_more.py  0002_product_auto_reorder_product_reorder_threshold_and_more.py  0003_alter_product_quantity_in_stock.py  0004_alter_stockmovement_date.py  0004_dimension_rename_name_product_title_and_more.py  0005_alter_product_discount_percentage.py  0005_alter_stockmovement_date_and_more.py  0006_meta_product_minimum_order_quantity_and_more.py  0007_merge_20240919_0843.py  0008_metainfo_remove_review_date_and_more.py
django_playground/templates/: base.html
django_playground/templates/pages/: home.html
django_playground/templates/stocks/: all_stocks.html  dashboard.html  product_detail.html  stock_movements.html
django_playground/templates/stocks/movements/: block-list.html  form.html  list.html
django_playground/templates/stocks/products/: burn.html  detail.html  form-send-order.html  list.html  order.html
django_playground/templates/stocks/products/components/: stock-status.html
django_playground/users/: adapters.py  apps.py  models.py  views.py
django_playground/users/management/commands/: generate_default_superuser.py
django_playground/users/migrations/: 0001_initial.py
django_playground/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt
